src/test/deca/context/valid/custom/affichage/print-int.deca
// Description:
//   Affichage d'un entier.
//   Selon les specifications du langane, la fonction print peut afficher les types int, float et string.
// Resultats:
//    Ligne 12: affichage sur la sortie standard.
//
// Historique:
//    cree le 07/01/2022

{
   // Doit etre compile.
   print(1);
}
