src/test/deca/context/invalid/custom/print-boolean.deca
// Description:
//   réalisation de affichage d un boolean;
//
// Resultats:
//    Ligne 12: error.
//   Selon les specifications du langane, la fonction print peut afficher les types int, float et string.
// Historique:
//    cree le 01/01/2022

{
   // Doit etre accepte.
   boolean res = true || false;
   print(res);
}
